--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -56,5 +56,6 @@ const t = useTranslations(lang);
   .languagepicker {
     display: flex;
     justify-content: flex-end;
+    position: relative;
   }
 </style>
