Fixed linkedin hred

--- a/src/components/SocialLinks.astro
+++ b/src/components/SocialLinks.astro
@@ -9,7 +9,7 @@ const t = useTranslations(lang);
 
 <Button
   as='a'
-  href="https://www.linkedin.com/in/kevin-alejandro-806b2a195/"
+  href="https://www.linkedin.com/in/kevhec/"
   newTab
   iconOnly
   aria-label={t('intro.linkedIn.label')}
