--- a/src/pages/[lang]/project/[slug].astro
+++ b/src/pages/[lang]/project/[slug].astro
@@ -39,16 +39,9 @@ const { Content } = await project.render();
         project={project}
       />
       <Content />
-      <Typography as='h2' class="gallery__heading">
-        {t('project.galleryHeading')}
-      </Typography>
-      <Slider>
-        {project.data.galleryImages.map(image => (
-          <swiper-slide>
-            <Image class="gallery__image" src={image.src} alt={image.alt} />
-          </swiper-slide>
-        ))}
-      </Slider>
+      <Slider
+        images={project.data.galleryImages}
+      />
     </main>
   </Container>
 </Layout>
