--- a/src/sections/Projects.astro
+++ b/src/sections/Projects.astro
@@ -5,6 +5,9 @@ import _slug_ from 'src/pages/[lang]/project/[slug].astro';
 import Container from '@components/Container.astro';
 import Typography from '@components/Typography.astro';
 import ProjectCard from '@components/ProjectCard.astro';
+import { Image } from 'astro:assets';
+import ProjectThumbnail from '@components/ProjectThumbnail.astro';
+import ProjectsShowcase from '@components/ProjectsShowcase.astro';
 
 const pageLang = getLangFromUrl(Astro.url);
 const t = useTranslations(pageLang);
@@ -19,23 +22,13 @@ const projects = await getCollection('projects', ({ slug }) => {
     <Typography as='h2' class="projects__heading line-height-1">
       {t("projects.heading")}
     </Typography>
-    <ul class="projects">
-      {
-        projects.map((project) => (
-          <li class="projects__listItem">
-            <ProjectCard
-              mockup={project.data.mockup}
-              mockupAlt={project.data.mockupAlt}
-              projectName={project.data.projectName}
-              excerpt={project.data.excerpt}
-              projectHref={`/${pageLang}/project/${project.slug.split('/').slice(1)}`}
-            />
-          </li>
-        ))
-      }
-    </ul>
+    <ProjectsShowcase projects={projects} />
   </div>
 </Container>
+
+<script>
+
+</script>
 
 <style lang="scss">
   .projects {
