--- a/src/styles/base/_utils.scss
+++ b/src/styles/base/_utils.scss
@@ -7,3 +7,20 @@
   white-space: nowrap;
   width: 1px;
 }
+
+.noBullet {
+  list-style-type: none;
+}
+
+.noMargin {
+  margin: 0;
+}
+
+.restarted-list {
+  list-style-type: none;
+  padding-left: 0;
+}
+
+.relative {
+  position: relative;
+}
