--- a/src/components/Button.astro
+++ b/src/components/Button.astro
@@ -9,25 +9,27 @@ type Variants =
   HTMLTag
 
 type Props<Tag extends Variants> = Polymorphic<{
-  as: Tag,
+  as: Tag
   href?: string
-  iconOnly?: boolean,
-  textOnly?: boolean,
-  newTab?: boolean,
-  positionAware?: boolean,
-  noBorder?: boolean,
-  inline?: boolean,
+  iconOnly?: boolean
+  textOnly?: boolean
+  newTab?: boolean
+  positionAware?: boolean
+  noBorder?: boolean
+  inline?: boolean
+  spanColor?: string
 }>
 
 const {
   as: Tag,
   href,
   iconOnly,
-  newTab, 
+  newTab,
   textOnly,
   positionAware,
   noBorder,
   inline,
+  spanColor,
   ...attrs
 } = Astro.props;
 ---
@@ -52,8 +54,10 @@ const {
   <slot />
 </Tag>
 
-<style lang="scss">
+<style lang="scss" define:vars={{spanColor}}>
   .button {
+    display: flex;
+    gap: rem(8);
     position: relative;
     overflow: hidden;
     font-family: $lora;
@@ -61,6 +65,7 @@ const {
     font-weight: 600;
     text-decoration: none;
     color: $primary-light-beige;
+    z-index: 10;
 
     &:not(.button--iconOnly):not(.button--textOnly):not(.button--noBorder) {
       padding: rem(8) rem(16);
@@ -89,11 +94,11 @@ const {
       left: var(--left);
       transform: translate(-50%, -50%);
       @include size(0);
-      background-color: rgba(225, 230, 224, 0.2);
+      background-color: var(--spanColor, rgba(225, 230, 224, 0.2));
       transition-property: width, height;
       transition-duration: 0.4s, 0.4s;
       transition-timing-function: ease-in-out, ease-in-out;
-      z-index: -1;
+      z-index: 9;
     }
 
     &--inline {
@@ -106,71 +111,47 @@ const {
 
 <script>
   const getButtonProps = (button: HTMLButtonElement) => {
-    const buttonRect = button.getBoundingClientRect();
-
-    const scrollTop = window.scrollY || document.documentElement.scrollTop;
-
-    const yPos = buttonRect.top + scrollTop;
-    const xPos = buttonRect.left;
     const width = button.offsetWidth;
     const height = button.offsetHeight;
 
-    console.log(yPos)
-
     return {
-      yPos,
-      xPos,
       width,
       height,
     };
   };
 
   const positionSpan = ({
-    span, mouseEvent, xPos, yPos, width, height
+    span, mouseEvent
   }:{
     span: HTMLSpanElement,
     mouseEvent?: MouseEvent,
-    xPos: number,
-    yPos: number,
-    width: number,
-    height: number,
   }) => {
-    const clientX = mouseEvent?.clientX
-    const pageY = mouseEvent?.pageY
+    const offsetX = mouseEvent?.offsetX
+    const offsetY = mouseEvent?.offsetY
 
-    const relX = clientX
-      ? clientX - xPos
-      : width / 2
-
-    const relY = pageY
-      ? pageY - yPos
-      : height / 2
-
-    span.style.setProperty('--left', `${relX}px`);
-    span.style.setProperty('--top', `${relY}px`);
+    span.style.setProperty('--left', `${offsetX}px`);
+    span.style.setProperty('--top', `${offsetY}px`);
   };
 
   const applyButtonsVariables = () => {
     const buttons:
-      // eslint-disable-next-line no-undef
       NodeListOf<HTMLButtonElement> = document.querySelectorAll('.button--positionAware');
 
     buttons.forEach((button) => {
       const span = button.querySelector('span');
-      const { xPos, yPos, width, height } = getButtonProps(button);
+      const { width } = getButtonProps(button);
 
       if (span) {
-        positionSpan({ span, xPos, yPos, width, height })
+        positionSpan({ span })
       }
 
       button.style.setProperty('--button-width', `${width}px`);
 
       const handleButtonEvent = (evt: MouseEvent) => {
         if (!span) return;
-        positionSpan({
-          span, mouseEvent: evt, xPos, yPos, width, height
-        });
+        positionSpan({ span, mouseEvent: evt });
       };
+
       button.removeEventListener('mouseenter', handleButtonEvent);
       button.removeEventListener('mouseleave', handleButtonEvent);
 
