--- a/src/components/ProjectThumbnail.astro
+++ b/src/components/ProjectThumbnail.astro
@@ -26,12 +26,15 @@ const {
 ---
 
 <div class="projectThumbnail">
-  <Image
-    src={logo}
-    alt={`${projectName} logo`}
-    width={50}
-    class="projectThumbnail__logo"
-  />
+  <figure class="projectThumbnail__figure">
+    <Image
+      src={logo}
+      alt={`${projectName} logo`}
+      width={50}
+      height={50}
+      class="projectThumbnail__logo"
+    />
+  </figure>
   <div class="projectThumbnail__content">
     <Typography as='h3' class="projectThumbnail__name">
       {projectName}
@@ -50,15 +53,28 @@ const {
 
 <style lang="scss">
   .projectThumbnail {
+    @include flexCenter();
     display: flex;
+    padding: 8px 0;
+    width: 100%;
+    height: 100%;
+    color: $primary-green;
+    background-color: $primary-light-beige;
+
+    @include mediaq($bp_tablet) {
+      padding: rem(16);
+      flex-direction: column-reverse;
+      justify-content: space-between;
+      flex-basis: 400px;
+      gap: rem(8);
+    }
 
     &__content {
       display: none;
 
       @include mediaq($bp_tablet) {
         @include flexCenter();
-        width: 100%;
-        gap: rem(24);
+        gap: rem(8);
       }
     }
 
@@ -67,15 +83,42 @@ const {
 
       @include mediaq($bp_tablet) {
         display: block;
+        font-size: rem(16);
+        font-weight: 400;
       }
     }
 
     &__link {
       display: none;
 
-      @include mediaq($bp_tablet) {
+      /* @include mediaq($bp_tablet) {
         display: block;
+      } */
+    }
+
+    &__figure {
+      @include flexCenter();
+      position: relative;
+      width: 50px;
+      height: auto;
+      aspect-ratio: 1 / 1;
+
+      &::before {
+        content: '';
+        width: 125%;
+        height: auto;
+        position: absolute;
+        aspect-ratio: 1 / 1;
+        background-color: $primary-light-beige;
+        border-radius: 50%;
+        padding: rem(8);
+        z-index: 1;
       }
+    }
+
+    &__logo {
+      position: relative;
+      z-index: 2;
     }
   }
 </style>
