--- a/src/components/ProjectsShowcase.astro
+++ b/src/components/ProjectsShowcase.astro
@@ -3,6 +3,8 @@ import type { CollectionEntry } from 'astro:content'
 import ProjectCard from './ProjectCard.astro';
 import ProjectThumbnail from './ProjectThumbnail.astro';
 import { getLangFromUrl, useTranslations } from '@i18n/utils';
+import Icon from './icon/Icon.astro';
+import ProjectContext from './ProjectContext.astro';
 
 interface Props {
   projects: CollectionEntry<'projects'>[]
@@ -25,30 +27,30 @@ const projectsWithRef = projects.map((project) => {
 })
 ---
 <section id="project-selector-carousel" class="splide projectsShowcase" aria-label={t('projects.mainCarousel.aria')}>
-  <div class="splide__track">
+  <div class="splide__track projectsShowcase__gallery">
     <ul class="splide__list restarted-list">
       {
         projectsWithRef.map((project) => (
-          <li class="splide__slide projects__listItem">
+          <li class="splide__slide projectsShowcase__listItem">
             <ProjectCard project={project}/>
           </li>
         ))
       }
     </ul>
   </div>
-  <div class="relative">
-    <div class="splide__arrows projectsShowcase__arrows">
-      <button class="splide__arrow splide__arrow--prev projectsShowcase__arrow projectsShowcase__arrow--prev">
-        {"<"}
-      </button>
-      <button class="splide__arrow splide__arrow--next projectsShowcase__arrow projectsShowcase__arrow--next">
-        {">"}
-      </button>
-    </div>
-    <ul class="thumbnails projectsShowcase__thumbnails restarted-list" id="thumbnails">
-      {
-        projectsWithRef.map((project, i, arr) => (
-          <>
+  <div class="projectsShowcase__data-container relative">
+    <div class="relative">
+      <div class="splide__arrows projectsShowcase__arrows">
+        <button class="splide__arrow splide__arrow--prev projectsShowcase__arrow projectsShowcase__arrow--prev">
+          <Icon variant='ChevronRight' />
+        </button>
+        <button class="splide__arrow splide__arrow--next projectsShowcase__arrow projectsShowcase__arrow--next">
+          <Icon variant='ChevronRight' />
+        </button>
+      </div>
+      <ul class="thumbnails projectsShowcase__thumbnails restarted-list" id="thumbnails">
+        {
+          projectsWithRef.map((project, i) => (
             <li
               class="thumbnail projectsShowcase__thumbnail"
               tabindex="0"
@@ -57,15 +59,30 @@ const projectsWithRef = projects.map((project) => {
             >
               <ProjectThumbnail project={project} />
             </li>
-            {
-              i < arr.length - 1 && (
-                <div class="divisor" />
-              )
-            }
-          </>
-        ))
-      }
-    </ul>
+          ))
+        }
+      </ul>
+    </div>
+    <section
+    id={`context-carousel`}
+    class="splide projectsShowcase__contextSplide"
+    aria-label={t('project.context.aria')}
+  >
+    <div class="splide__track">
+      <ul class="splide__list restarted-list">
+        {projectsWithRef.map((project) => (
+          <li class="splide__slide">
+            <ProjectContext
+              projectName={project.data.projectName}
+              projectHref={project.projectHref}
+              excerpt={project.data.excerpt}
+              classes='projectsShowcase__context'
+            />
+          </li>
+        ))}
+      </ul>
+    </div>
+  </section>
   </div>
 </section>
 
@@ -73,15 +90,27 @@ const projectsWithRef = projects.map((project) => {
   import Splide from '@splidejs/splide'
 
   const thumbnails = document.querySelectorAll<HTMLLIElement>('.thumbnail.projectsShowcase__thumbnail')
+
   let currentThumbnail: HTMLLIElement | undefined
 
-  const showcaseSplide = new Splide("#project-selector-carousel", {
+  const showcaseSlider = new Splide("#project-selector-carousel", {
     pagination: false,
+    drag: false,
+    type: 'fade'
   })
+
+  const contextSlider = new Splide(`#context-carousel`, {
+    pagination: false,
+    arrows: false,
+    type: 'fade'
+  })
+
+  contextSlider.on('mounted move', handleSlidesChange)
 
   function initThumbnail(thumbnail: HTMLLIElement, index: number) {
     thumbnail.addEventListener('click', () => {
-      showcaseSplide.go(index)
+      showcaseSlider.go(index)
+      contextSlider.go(index)
     })
   }
 
@@ -89,29 +118,71 @@ const projectsWithRef = projects.map((project) => {
     initThumbnail(thumbnails[i], i)
   }
 
-  showcaseSplide.on('mounted move', () => {
+  function handleSlidesChange() {
     if (currentThumbnail) {
       currentThumbnail.classList.remove('projectsShowcase__thumbnail--is-active')
       currentThumbnail.removeAttribute('aria-current')
     }
 
-    const newCurrentThumbnail = thumbnails[showcaseSplide.index]
+    const newCurrentThumbnail = thumbnails[showcaseSlider.index]
 
     if (newCurrentThumbnail) {
       newCurrentThumbnail.classList.add('projectsShowcase__thumbnail--is-active')
       newCurrentThumbnail.setAttribute('aria-current', 'true')
       currentThumbnail = newCurrentThumbnail
     }
-  })
+  }
 
-  showcaseSplide.mount();
+  showcaseSlider.on('mounted move', handleSlidesChange)
+  contextSlider.on('mounted move', handleSlidesChange)
+
+  showcaseSlider.sync(contextSlider)
+
+  showcaseSlider.mount()
+  contextSlider.mount()
 </script>
 
 <style lang="scss">
   .projectsShowcase {
     display: flex;
     flex-direction: column;
-    gap: rem(16);
+    gap: rem(32);
+
+    @include mediaq($bp-tablet) {
+      display: grid;
+      grid-template-columns: 2fr 1fr;
+    }
+
+    &__gallery {
+      border-radius: 8px;
+      overflow: hidden;
+      border: 4px solid $primary-light-beige;
+
+      @include mediaq($bp-tablet) {
+        grid-column: 1 / 2;
+      }
+    }
+
+    &__contextSplide {
+      display: none;
+
+      & * {
+        height: 100%;
+      }
+
+      @include mediaq($bp-tablet) {
+        display: block;
+        flex: 1;
+      }
+    }
+
+    &__data-container {
+      @include mediaq($bp-tablet) {
+        display: grid;
+        grid-template-rows: min-content 1fr;
+        gap: rem(8);
+      }
+    }
 
     &__thumbnails {
       display: flex;
@@ -119,48 +190,92 @@ const projectsWithRef = projects.map((project) => {
       border-radius: 8px;
       overflow: hidden;
       position: relative;
+
+      @include mediaq($bp-tablet) {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+      }
+    }
+
+    &__arrows {
+      top: 0;
     }
 
     &__arrow {
-      background-color: transparent;
-      color: white;
+      $translationX: 160%;
+      $translationY: -25%;
+      $arrow-size: rem(24);
+      $icon-size: rem(12);
+      
+      @include flexCenter();
+      top: -$arrow-size;
+      width: $arrow-size;
+      height: $arrow-size;
+      padding: rem(4);
+      aspect-ratio: 1 / 1;
+      background-color: $primary-light-beige;
       transition: all ease-in-out 100ms;
+      color: white;
+
+      & > :global(svg) {
+        width: $icon-size;
+        height: $icon-size;
+      }
 
       &--prev {
-        left: 0;
-        transform: translateX(-100%) translateY(-50%);
+        right: 0;
+        left: unset;
+        transform: translateX(-$translationX) translateY($translationY);
       }
 
       &--next {
         right: 0;
-        transform: translateX(100%) translateY(-50%);
+        transform: translateY($translationY);
       }
     }
 
     &__thumbnail {
-      @include flexCenter();
       flex-grow: 1;
-      opacity: 0.3;
-      padding: 8px 0;
-      transition: opacity ease-in 200ms;
       cursor: pointer;
-      background-color: #A0522D;
+      position: relative;
+
+      & > :global(.projectThumbnail) {
+        transition: opacity ease-in 200ms;
+        opacity: 0.3;
+      }
+
+      &:not(:last-of-type)::after {
+        content: '';
+        width: 2px;
+        height: 100%;
+        position: absolute;
+        background-color: white;
+        transform: translateX(-50%);
+        right: 0;
+        top: 0;
+
+        @include mediaq($bp-tablet) {
+          display: none;
+        }
+      }
 
       &:hover:not(&--is-active) {
-        opacity: .6;
+        & > :global(.projectThumbnail) {
+          opacity: .6;
+        }
       }
 
       &--is-active {
-        opacity: 1;
+        & > :global(.projectThumbnail) {
+          opacity: 1;
+        }
       }
     }
   }
 
-  .divisor {
-    position: absolute;
-    height: 100%;
-    width: 2px;
-    background-color: white;
-
+  :global(.projectsShowcase__context) {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
   }
 </style>
